--- a/app/src/main/res/layout/fragment_track_item.xml
+++ b/app/src/main/res/layout/fragment_track_item.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:src="@drawable/ic_baseline_explicit_24"
-        android:textColor="#ff4433"
+        android:textColor="@color/colorExplicitText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/track_time"
         app:layout_constraintStart_toEndOf="@+id/track_name"
